--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
             </h2>
             <h2 class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.event_details') }}">Book Event</a>
+              <a class="nav-link" href="{{ url_for('main.event_details', event_id=1) }}">Book Event</a>
             </h2>
             <h2 class="nav-item">
               <a class="nav-link" href="{{ url_for('main.event_creation') }}">Create Event</a>
@@ -99,7 +99,7 @@
             <div class="col-s-12 col-md-6">
               <!-- Event Image with Link to Details Page -->
               <a href="{{ url_for('main.event_details', event_id=event.id) }}">
-                <img src="{{ event.photo }}" class="img-thumbnail" alt="{{ event.name }}" width="250" height="250">
+                <img src="{{ url_for('static', filename=event.photo) }}" class="img-thumbnail" alt="{{ event.name }}" width="250" height="250">
               </a>
             </div>
             <div class="col-s-12 col-md-6">
@@ -150,5 +150,4 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
