--- a/website/templates/Register Page.html
+++ b/website/templates/Register Page.html
@@ -30,7 +30,7 @@
               <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
             </h2>
             <h2 class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.event_details') }}">Book Event</a>
+              <a class="nav-link" href="{{ url_for('main.event_details', event_id=1) }}">Book Event</a>
             </h2>
             <h2 class="nav-item">
               <a class="nav-link" href="{{ url_for('main.event_creation') }}">Your Events</a>
