--- a/website/templates/Register Page.html
+++ b/website/templates/Register Page.html
@@ -50,30 +50,30 @@
   <main>
     <div class="container bg-light p-4 mt-4">
       <h2 class="text-center">Create an Account</h2>
-      <form method="POST" action="/register">
+      <form action="{{url_for('main.register') }}" method="POST">
         <div class="mb-3">
           <label for="name" class="form-label">Full Name:</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email Address:</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+          <label for="emailid" class="form-label">Email Address:</label>
+          <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Enter your email" required>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password:</label>
           <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">Confirm Password:</label>
-          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
+          <label for="password_hash" class="form-label">Confirm Password:</label>
+          <input type="password" class="form-control" id="password_hash" name="password_hash" placeholder="Confirm your password" required>
         </div>
         <div class="mb-3">
-          <label for="contact" class="form-label">Contact Number:</label>
-          <input type="contact" class="form-control" id="contact" placeholder="Enter your contact number" required>
+          <label for="contact_number" class="form-label">Contact Number:</label>
+          <input type="text" class="form-control" id="contact_number" name="contact_number" placeholder="Enter your contact number" required>
         </div>
         <div class="mb-3">
-          <label for="street" class="form-label">Street Address:</label>
-          <input type="street" class="form-control" id="street" placeholder="Enter your street address" required>
+          <label for="street_address" class="form-label">Street Address:</label>
+          <input type="text" class="form-control" id="street_address" name="street_address" placeholder="Enter your street address" required>
         </div>
         <div class="d-flex justify-content-center">
           <button type="submit" class="btn btn-primary">Register</button>
