--- a/website/templates/Login Page.html
+++ b/website/templates/Login Page.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="{{ url_for('main.event_details', event_id=1) }}">Book Event</a>
             </h2>
             <h2 class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.event_creation') }}">Your Events</a>
+              <a class="nav-link" href="{{ url_for('main.event_creation') }}">Create Event</a>
             </h2>
             <h2 class="nav-item">
               <a class="nav-link" href="{{ url_for('main.my_account') }}">My Account</a>
