--- a/website/templates/Login Page.html
+++ b/website/templates/Login Page.html
@@ -48,18 +48,28 @@
   </header>
 
   <main>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul>
+                {% for category, message in messages %}
+                    <!-- Apply a class based on the category for styling -->
+                    <li class="flash {{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     <div class="container bg-light p-4 mt-4">
       <h2 class="text-center mb-4">Login to Your Account</h2>
       <div class="row justify-content-center">
         <div class="col-md-6 border p-4">
-          <form id="login-form">
+          <form action="{{url_for('main.login') }}" method="POST">
             <div class="mb-3">
-              <label for="email" class="form-label">Email:</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+              <label for="name" class="form-label">username:</label>
+              <input type="text" class="form-control" id="name" name="name" placeholder="Enter your username" required>
             </div>
             <div class="mb-3">
-              <label for="password" class="form-label">Password:</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+              <label for="password_hash" class="form-label">Password:</label>
+              <input type="password" class="form-control" id="password_hash"name="password_hash" placeholder="Enter your password" required>
             </div>
             <div class="d-flex justify-content-between">
               <button type="submit" class="btn btn-primary">Login</button>
