--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -81,6 +81,16 @@
   </header>
 
   <main>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul>
+                {% for category, message in messages %}
+                    <!-- Apply a class based on the category for styling -->
+                    <li class="flash {{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     <!-- Events List -->
     <div class="container-fluid text-center mt-3 paddingBottom">
       <div class="row justify-content-center">
